tariffs added hub and usergroup
